[B]Version 1.0[/B]
- First version 1
[B]Version 1.1.0[/B]
- Fixed some bugs about folder names and zip files and naming etc
[B]Version 1.1.2[/B]
- Fixed some bugs about folder names and zip files and naming etc
[B]Version 1.2.0[/B]
- Updated live channels, seems better now
[B]Version 2.0.0[/B]
- Implemented RTMP streaming now.
- Option to select which steam to play as well as the default select

[B]Version 2.1.0[/B]
- Support for Gotham

[B]Version 2.2.0[/B]
- Reading streams from the source-eboundservices

[B]Version 2.2.1[/B]
- Fixed dependencie
[B]Version 2.2.2[/B]
- Progress bars etc while streaming
[B]Version 2.2.3[/B]
- house cleaning
[B]Version 2.2.4[/B]
- Timeout specified while live streaming
[B]Version 2.2.5[/B]
- Fixed Favourite bug, now you can add links to favourites and run it
[B]Version 2.2.6[/B]
- Fixed the recent in the streaming site change done by you know who!
[B]Version 2.2.7[/B]
- Small bug in next page
[B]Version 2.2.9[/B]
- change on the website reflected in the addon
[B]Version 2.3.0[/B]
- Gotham dependencies
[B]Version 2.3.1[/B]
- added ARY Digital and news in eb section
[B]Version 2.3.1[/B]
- Removed Common
[B]Version 2.4.0[/B]
- Added "Other" source
[B]Version 2.4.1[/B]
- Added Babytv
[B]Version 2.4.2[/B]
- Added StarGold