@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="2.4.2"
+       version="2.4.3"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
